--- a/src/css/Netflix.css
+++ b/src/css/Netflix.css
@@ -237,7 +237,7 @@ transform-origin: top right;
 
 @media (max-width: 768px) {
   .netflix-page-container {
-    padding: 40px 5% 30px 5%;
+    padding: 30px 1% 30px 1%;
   }
   
   .netflix-logo {
@@ -255,6 +255,7 @@ transform-origin: top right;
     gap: 20px;
   }
 
+  
   
   .floating-movie-card {
     transform:  scale(0.20);
